Translation of french translation credits Spanish translation group moved from contributors to spanish translation specific credits

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -561,13 +561,7 @@
             berelinde: writer, coder, proofreader, troubleshooter, playtester
           </li>
           <li>
-            Bhasbuto: translator
-          </li>
-          <li>
             Big Rob: proofreader
-          </li>
-          <li>
-            Bittman: translator
           </li>
           <li>
             Black Elk: proofreader
@@ -588,9 +582,6 @@
             Caillean: playtester
           </li>
           <li>
-            Calamity: translator
-          </li>
-          <li>
             Cam: coder
           </li>
           <li>
@@ -601,9 +592,6 @@
           </li>
           <li>
             Chevalier: troubleshooter, playtester
-          </li>
-          <li>
-            Chocobo_Tyrael: translator
           </li>
           <li>
             Clary: proofreader
@@ -654,40 +642,16 @@
             Elena: coder
           </li>
           <li>
-            Elthalas: translator
-          </li>
-          <li>
-            Elwe Alcarin: translator
-          </li>
-          <li>
             erebusant: playtester, troubleshooter
-          </li>
-          <li>
-            Eresh Kigal: translator
           </li>
           <li>
             Eric: coder, proofreader
           </li>
           <li>
-            Excalibur: translator
-          </li>
-          <li>
-            garciafigueres: translator
-          </li>
-          <li>
-            Ghildrean: translator
-          </li>
-          <li>
             Ginger: playtester
           </li>
           <li>
-            girfut: translator
-          </li>
-          <li>
             Gorilym: coder, proofreader, troubleshooter, playtester
-          </li>
-          <li>
-            Gorobei: translator
           </li>
           <li>
             Grand Dracolich: proofreader, playtester
@@ -697,9 +661,6 @@
           </li>
           <li>
             Grim Squeaker: coder
-          </li>
-          <li>
-            Hector Blanco: translator
           </li>
           <li>
             Helseth: proofreader
@@ -720,12 +681,6 @@
             Icelus: coder, proofreader
           </li>
           <li>
-            Immortality: proofreader, translator, translation coordinator
-          </li>
-          <li>
-            InFlames: translator
-          </li>
-          <li>
             INS-Hyacinth: proofreader
           </li>
           <li>
@@ -735,19 +690,10 @@
             Inuna: playtester
           </li>
           <li>
-            Isaya: proofreader
-          </li>
-          <li>
-            jade: translator
-          </li>
-          <li>
             jastey: writer, coder, proofreader, troubleshooter, playtester
           </li>
           <li>
             Jinnai: writer
-          </li>
-          <li>
-            JK_Eye: translator
           </li>
           <li>
             -JW-: troubleshooter, coder
@@ -760,9 +706,6 @@
           </li>
           <li>
             Karkadinn: writer
-          </li>
-          <li>
-            Karnak: translator
           </li>
           <li>
             Katerina: playtester
@@ -786,13 +729,7 @@
             Kitana: playtester
           </li>
           <li>
-            Kronos: translator
-          </li>
-          <li>
             Kulyok: writer, coder, proofreader, troubleshooter, playtester
-          </li>
-          <li>
-            L@Zar0: translator
           </li>
           <li>
             Lisandro: proofreader
@@ -808,9 +745,6 @@
           </li>
           <li>
             Merja: writer
-          </li>
-          <li>
-            Miguelan: translator
           </li>
           <li>
             Milkfed: troubleshooter, playtester
@@ -837,9 +771,6 @@
             Nythrun: coder
           </li>
           <li>
-            Perse: translator
-          </li>
-          <li>
             Princeps: proofreader
           </li>
           <li>
@@ -858,19 +789,7 @@
             Reverendratbastard: proofreader
           </li>
           <li>
-            Rhaenys: translator
-          </li>
-          <li>
             Riane: playtester
-          </li>
-          <li>
-            rMz: translator
-          </li>
-          <li>
-            Saemon: proofreader, translator
-          </li>
-          <li>
-            Samurai_zero: proofreader, translator
           </li>
           <li>
             Sarah J: writer
@@ -951,9 +870,6 @@
             Wyvern: proofreader
           </li>
           <li>
-            Xanatoss: translator
-          </li>
-          <li>
             XVIII: coder
           </li>
           <li>
@@ -961,9 +877,6 @@
           </li>
           <li>
             Zulrik: writer
-          </li>
-          <li>
-            ¿Quien si no?: translator
           </li>
           <li>
             10thLich: proofreader
@@ -1067,35 +980,121 @@
           <li>
             Yeslick: Deathmage (early dialogue ideas), Tancred (character concept, banter, interjections, PC dialogue)
           </li>
-        <br/>
-        <strong>Traduction française</strong> : pour tout support, rendez-vous sur <a href="http://www.baldursgateworld.fr/lacouronne/forum.php">La Couronne de Cuivre</a>
-        <li>
-          Eleima : traductrice (Xan)
-        </li>
-        <li>
-          Galathée : traductrice (Ajantis, romance de Coran, Garrick, Jaheira, Khalid, Minsc, Montaron, Tiax, conflit Ajantis - Coran - Xan)
-        </li>
-        <li>
-          Garfield : traducteur (Kagain, Yeslick)
-        </li>
-        <li>
-          Graoumf : coordinateur de traduction, relecteur
-        </li>
-        <li>
-          Isaya : traducteur (Imoen, objets, personnages), coordinateur de traduction, relecteur, assembleur, outil de récupération de traduction
-        </li>
-        <li>
-          La Voix 2 la Sagesse : traducteur (Dynahéir, Eldoth, Shar-Teel, Skie), relecteur
-        </li>
-        <li>
-          Lefreut : testeur, outil de vérification
-        </li>
-        <li>
-          Le Marquis : traducteur (Alora, Branwen, Faldorn, Quayle, Safana)
-        </li>
-        <li>
-          Lothringen : traductrice (Coran, sauf la romance, Edwin, Kivan, Viconia, Xzar, ajustement de réputation grâce à des bardes)
-        </li>
+          <br/>
+          <strong>Spanish translation:</strong>
+          <li>
+            Bhasbuto: translator
+          </li>
+          <li>
+            Bittman: translator
+          </li>
+          <li>
+            Calamity: translator
+          </li>
+          <li>
+            Chocobo_Tyrael: translator
+          </li>
+          <li>
+            Elthalas: translator
+          </li>
+          <li>
+            Elwe Alcarin: translator
+          </li>
+          <li>
+            Eresh Kigal: translator
+          </li>
+          <li>
+            Excalibur: translator
+          </li>
+          <li>
+            garciafigueres: translator
+          </li>
+          <li>
+            Ghildrean: translator
+          </li>
+          <li>
+            girfut: translator
+          </li>
+          <li>
+            Gorobei: translator
+          </li>
+          <li>
+            Hector Blanco: translator
+          </li>
+          <li>
+            Immortality: proofreader, translator, translation coordinator
+          </li>
+          <li>
+            InFlames: translator
+          </li>
+          <li>
+            jade: translator
+          </li>
+          <li>
+            JK_Eye: translator
+          </li>
+          <li>
+            Karnak: translator
+          </li>
+          <li>
+            Kronos: translator
+          </li>
+          <li>
+            L@Zar0: translator
+          </li>
+          <li>
+            Miguelan: translator
+          </li>
+          <li>
+            Perse: translator
+          </li>
+          <li>
+            Rhaenys: translator
+          </li>
+          <li>
+            rMz: translator
+          </li>
+          <li>
+            Saemon: proofreader, translator
+          </li>
+          <li>
+            Samurai_zero: proofreader, translator
+          </li>
+          <li>
+            Xanatoss: translator
+          </li>
+          <li>
+            ¿Quien si no?: translator
+          </li>
+          <br/>
+          <strong>French translation:</strong> for support, please visit <a href="http://www.baldursgateworld.fr/lacouronne/baldurs-gate-reloaded-les-mods-tutu-et-baldurs-gate-trilogy/">La Couronne de Cuivre</a>
+          <li>
+            Eleima: translator (Xan)
+          </li>
+          <li>
+            Galathée: translator (Ajantis, Coran romance, Garrick, Jaheira, Khalid, Minsc, Montaron, Tiax, Female Romance Challenges)
+          </li>
+          <li>
+            Garfield: translator (Kagain, Yeslick)
+          </li>
+          <li>
+            Graoumf: translation coordinator, proofreader
+          </li>
+          <li>
+            Isaya: translator (Imoen, items, characters), translation coordinator, proofreader, packaging, translation retriever tool
+          </li>
+          <li>
+            La Voix 2 la Sagesse: translator (Dynahéir, Eldoth, Shar-Teel, Skie), proofreader
+          </li>
+          <li>
+            Lefreut: playtester, verification tool
+          </li>
+          <li>
+            Le Marquis: translator (Alora, Branwen, Faldorn, Quayle, Safana)
+          </li>
+          <li>
+            Lothringen: translator (Coran, except romance, Edwin, Kivan, Viconia, Xzar, Bardic Reputation Adjustment)
+          </li>
         </ul>
       </p>
       <p>
