Moved spanish translation group from contributors to a spanish translation specific block Removed french translators from contributors (they are already listed in a specific block)

--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -563,13 +563,7 @@
             berelinde : auteure, programmeuse, relectrice, correctrice, testeur
           </li>
           <li>
-            Bhasbuto : traducteur
-          </li>
-          <li>
             Big Rob : relecteur
-          </li>
-          <li>
-            Bittman : traducteur
           </li>
           <li>
             Black Elk : relecteur
@@ -590,9 +584,6 @@
             Caillean : testeur
           </li>
           <li>
-            Calamity : traducteur
-          </li>
-          <li>
             Cam : programmeur
           </li>
           <li>
@@ -603,9 +594,6 @@
           </li>
           <li>
             Chevalier : correcteur, testeur
-          </li>
-          <li>
-            Chocobo_Tyrael : traducteur
           </li>
           <li>
             Clary : relecteur
@@ -653,67 +641,28 @@
             Echon : testeur
           </li>
           <li>
-            Eleima : traductrice
-          </li>
-          <li>
             Elena : programmeur
-          </li>
-          <li>
-            Elthalas : traducteur
-          </li>
-          <li>
-            Elwe Alcarin : traducteur
           </li>
           <li>
             erebusant : testeur, correcteur
           </li>
           <li>
-            Eresh Kigal : traducteur
-          </li>
-          <li>
             Eric : programmeur, relecteur
-          </li>
-          <li>
-            Excalibur : traducteur
-          </li>
-          <li>
-            Galathée : traductrice
-          </li>
-          <li>
-            garciafigueres : traducteur
-          </li>
-          <li>
-            Garfield : traducteur
-          </li>
-          <li>
-            Ghildrean : traducteur
           </li>
           <li>
             Ginger : testeur
           </li>
           <li>
-            girfut : traducteur
-          </li>
-          <li>
             Gorilym : programmeur, relecteur, correcteur, testeur
           </li>
           <li>
-            Gorobei : traducteur
-          </li>
-          <li>
             Grand Dracolich : relecteur, testeur
-          </li>
-          <li>
-            Graoumf : coordinateur de traduction, relecteur
           </li>
           <li>
             Greis : relecteur
           </li>
           <li>
             Grim Squeaker : programmeur
-          </li>
-          <li>
-            Hector Blanco : traducteur
           </li>
           <li>
             Helseth : relecteur
@@ -734,12 +683,6 @@
             Icelus : programmeur, relecteur
           </li>
           <li>
-            Immortality : relectrice, traductrice, coordinatrice de traduction
-          </li>
-          <li>
-            InFlames : traducteur
-          </li>
-          <li>
             INS-Hyacinth : relecteur
           </li>
           <li>
@@ -749,19 +692,10 @@
             Inuna : testeur
           </li>
           <li>
-            Isaya : traducteur, coordinateur de traduction, relecteur, programmeur d'outil
-          </li>
-          <li>
-            jade : traducteur
-          </li>
-          <li>
             jastey : auteure, programmeuse, relectrice, correctrice, testeur
           </li>
           <li>
             Jinnai : auteur
-          </li>
-          <li>
-            JK_Eye : traducteur
           </li>
           <li>
             -JW- : correcteur, programmeur
@@ -774,9 +708,6 @@
           </li>
           <li>
             Karkadinn : auteur
-          </li>
-          <li>
-            Karnak : traducteur
           </li>
           <li>
             Katerina : testeur
@@ -800,28 +731,10 @@
             Kitana : testeur
           </li>
           <li>
-            Kronos : traducteur
-          </li>
-          <li>
             Kulyok : auteure, programmeuse, relectrice, correctrice, testeur
           </li>
           <li>
-            L@Zar0 : traducteur
-          </li>
-          <li>
-            La Voix 2 la Sagesse : traducteur, relecteur
-          </li>
-          <li>
-            Lefreut : testeur, programmeur d'outil
-          </li>
-          <li>
-            Le Marquis : traducteur
-          </li>
-          <li>
             Lisandro : relecteur
-          </li>
-          <li>
-            Lothringen : traductrice
           </li>
           <li>
             Macready : programmeur
@@ -834,9 +747,6 @@
           </li>
           <li>
             Merja : auteur
-          </li>
-          <li>
-            Miguelan : traducteur
           </li>
           <li>
             Milkfed : correcteur, testeur
@@ -863,9 +773,6 @@
             Nythrun : programmeuse
           </li>
           <li>
-            Perse : traducteur
-          </li>
-          <li>
             Princeps : relecteur
           </li>
           <li>
@@ -884,19 +791,7 @@
             Reverendratbastard : relecteur
           </li>
           <li>
-            Rhaenys : traducteur
-          </li>
-          <li>
             Riane : testeur
-          </li>
-          <li>
-            rMz : traducteur
-          </li>
-          <li>
-            Saemon : relecteur, traducteur
-          </li>
-          <li>
-            Samurai_zero : relecteur, traducteur
           </li>
           <li>
             Sarah J : auteur
@@ -977,9 +872,6 @@
             Wyvern : relecteur
           </li>
           <li>
-            Xanatoss : traducteur
-          </li>
-          <li>
             XVIII : programmeur
           </li>
           <li>
@@ -987,9 +879,6 @@
           </li>
           <li>
             Zulrik : auteur
-          </li>
-          <li>
-            ¿Quien si no? : traducteur
           </li>
           <li>
             10thLich : relecteur
@@ -1094,8 +983,93 @@
             Yeslick : Deathmage (idées initiales de dialogue), Tancred (concept du personnage, bavardage, interjections, dialogue avec le PJ)
           </li>
           <br/>
+          <strong>Traduction espagnole :</strong>
+          <li>
+            Bhasbuto : traducteur
+          </li>
+          <li>
+            Bittman : traducteur
+          </li>
+          <li>
+            Calamity : traducteur
+          </li>
+          <li>
+            Chocobo_Tyrael : traducteur
+          </li>
+          <li>
+            Elthalas : traducteur
+          </li>
+          <li>
+            Elwe Alcarin : traducteur
+          </li>
+          <li>
+            Eresh Kigal : traducteur
+          </li>
+          <li>
+            Excalibur : traducteur
+          </li>
+          <li>
+            garciafigueres : traducteur
+          </li>
+          <li>
+            Ghildrean : traducteur
+          </li>
+          <li>
+            girfut : traducteur
+          </li>
+          <li>
+            Gorobei : traducteur
+          </li>
+          <li>
+            Hector Blanco : traducteur
+          </li>
+          <li>
+            Immortality : relectrice, traductrice, coordinatrice de traduction
+          </li>
+          <li>
+            InFlames : traducteur
+          </li>
+          <li>
+            jade : traducteur
+          </li>
+          <li>
+            JK_Eye : traducteur
+          </li>
+          <li>
+            Karnak : traducteur
+          </li>
+          <li>
+            Kronos : traducteur
+          </li>
+          <li>
+            L@Zar0 : traducteur
+          </li>
+          <li>
+            Miguelan : traducteur
+          </li>
+          <li>
+            Perse : traducteur
+          </li>
+          <li>
+            Rhaenys : traducteur
+          </li>
+          <li>
+            rMz : traducteur
+          </li>
+          <li>
+            Saemon : relecteur, traducteur
+          </li>
+          <li>
+            Samurai_zero : relecteur, traducteur
+          </li>
+          <li>
+            Xanatoss : traducteur
+          </li>
+          <li>
+            ¿Quien si no? : traducteur
+          </li>
           <br/>
-          <strong>Traduction française</strong> : pour tout support, rendez-vous sur <a href="http://www.baldursgateworld.fr/lacouronne/forum.php">La Couronne de Cuivre</a>
+          <strong>Traduction française :</strong> pour tout support, veuillez vous rendre sur <a href="http://www.baldursgateworld.fr/lacouronne/baldurs-gate-reloaded-les-mods-tutu-et-baldurs-gate-trilogy/">La Couronne de Cuivre</a>
           <li>
             Eleima : traductrice (Xan)
           </li>
