Readme Site Updates
Moved "check for version" from
old download page to new download manager categories

--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 20 - <a href="http://www.gibberlings3.net/downloads/#bg1npc">Vérifiez la version la plus récente</a></strong>
+        <strong>Version 20 - <a href="http://forums.gibberlings3.net/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
         <br/>
         <strong>Langues :</strong> Anglais, Espagnol, Français
         <br/>
