--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 20 - <a href="http://www.gibberlings3.net/downloads/#bg1npc">Check for the most recent version</a></strong>
+        <strong>Version 20 - <a href="http://forums.gibberlings3.net/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French
         <br/>
