--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -480,6 +480,9 @@
         <li>
           Dans les .DLG : utilisation de I_C_T avec renvoi ou de I_C_T3 avec renvoi pour une compatibilité maximum avec des interjections multiples pour le même état
         </li>
+        <li>
+		<table><tr><th>TuTu</th><th>Variable</th><th>Associated</th><th>BGT</th></tr><tr><td>dream</td><td>%bgdreams%</td><td>player1d</td><td>BG1Dream</td></tr><tr><td>2</td><td>%bgdream1%</td><td>DRMTXT-2 has played</td><td>1</td></tr><tr><td>3</td><td>%bgdream2%</td><td>DRMTXT-3 has played</td><td>2</td></tr><tr><td>4</td><td>%bgdream3%</td><td>DRMTXT-4 has played</td><td>3</td></tr><tr><td>5</td><td>%bgdream4%</td><td>DRMTXT-5 has played</td><td>4</td></tr><tr><td>6</td><td>%bgdream5%</td><td>DRMTXT-6 has played</td><td>5</td></tr><tr><td>7</td><td>%bgdream6%</td><td>DRMTXT-7 has played</td><td>6</td></tr></table>
+        </li>
       </ul>
       <p>
         Cette liste couvre les composants obligatoires. Pour des notes de compatibilité sur les composants installés de façon séparée, veuillez évaluer directement le code, en n'oubliant pas que les fichiers sont souvent liés entre eux, aussi cherchez avec attention. Bien que presque tout le code du Projet essaie activement d'éviter les problèmes de compatibilité, deux composants spécifiques réajustent par contre des comportements attendus significatifs. La relocalisation d'ALORA réécrit de façon destructive un nouveau [_]ALORA.DLG de pré-recrutement ; ainsi si un mod a ajouté quelque chose à son fichier de pré-recrutement, ces éléments seront détruits. La quête de la caravane de KAGAIN neutralise la variable "KagainCaravan" et la remplace par une nouvelle quête étendue qui fait appel à "X#KagainCaravan".
@@ -1261,14 +1264,14 @@
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
       <p>
-        <strong>Version 20 - November 11, 2011</strong>
+        <strong>Version 20 - November 26, 2011</strong>
       </p>
       <ul>
         <li>
           <font color="red">Added </font><strong>Traduction française</strong> : pour tout support, rendez-vous sur <a href="http://www.baldursgateworld.fr/lacouronne/forum.php">La Couronne de Cuivre</a>
         </li>
         <li> 
-          <font color="green">Repaired </font>From Isaya, reporting translator findings: x#cosqu.tra, <PRO_MANWOAMN> repaired to <PRO_MANWOMAN>
+          <font color="green">Repaired </font>From Isaya, reporting translator findings: x#cosqu.tra, < PRO_MANWOAMN > repaired to < PRO_MANWOMAN >
         </li>
         <li> 
           <font color="green">Repaired </font>From Isaya, reporting translator findings:  x#challenge.tra, string merge; lines across all translations now read:  <br />
@@ -1278,6 +1281,15 @@
         </li>
         <li> 
           <font color="green">Repaired </font>From Isaya, reporting translator findings: I_C_T ~%tutu_scripts%LAVLEAD~ 0 X#CoranRill repaired to correct line; I_C_T ~%tutu_scripts%LAVLEAD~ 2 X#CoranRill
+        </li>
+		<li>
+          <font color="green">Repaired </font> <a href="http://forums.gibberlings3.net/index.php?s=&showtopic=21446&view=findpost&p=182686.php"> ScuD's Yeslik repairs </a>
+        </li>
+        <li>
+          <font color="green">Repaired </font> <a href="https://github.com/cmorganbg/BG1NPC/commit/6bfbbdc8fcd1b62a844543998765f11799da1bc6"> BGT and TutTu Dream assignment repairs </a>
+        </li>
+		<li>
+          <font color="green">Repaired </font> <a href="https://github.com/cmorganbg/BG1NPC/commit/4a884b69b91666112f37e850f46e02dc1cd0a1b3"> Xan Slaver Quest dialog initiation switched to NPC script </a>
         </li>
       </ul>
       <p>
