README, Documentation Updates

--- a/bg1npc/bg1npc_docs/bg1npcvarindex.htm
+++ b/bg1npc/bg1npc_docs/bg1npcvarindex.htm
@@ -980,6 +980,13 @@
 
  </tr>
  <tr>
+  <td>charm</td>
+  <td>VARIABLE</td>
+  <td>LOCALS</td>
+  <td>x#amelix.baf: 26, 36, 47, 60, 70</td>
+
+ </tr>
+ <tr>
   <td>cmogremage</td>
   <td>NAME</td>
   <td>OBJECT</td>
@@ -4696,7 +4703,7 @@
   <td>VARIABLE</td>
   <td>GLOBAL</td>
   <td>P#IMANEL.D: 5, 11, 13, 16, 32-39, 44-51, 56-68, 110-121, 135-146, 151-153
-  P#WOLF.D: 5, 10, 15 P#IMANL2.BAF: 10-12, 16-22, 30-34, 47-57</td>
+  P#WOLF.D: 5, 10, 15 P#IMANL2.BAF: 3, 10-12, 16-22, 30-34, 47-57</td>
 
  </tr>
  <tr>
@@ -5342,6 +5349,13 @@
 
  </tr>
  <tr>
+  <td>prep</td>
+  <td>VARIABLE</td>
+  <td>LOCALS</td>
+  <td><span style="mso-spacerun: yes"> </span>x#amelix.baf: 22, 25; x#mag10c.baf: 4, 9; x#prs10b.baf: 4, 9; x#drui12.baf: 3, 8</td>
+
+ </tr>
+ <tr>
   <td>Pride</td>
   <td>VARIABLE</td>
   <td>GLOBAL</td>
@@ -5428,6 +5442,13 @@
   <td>VARIABLE</td>
   <td>GLOBAL</td>
   <td>X#KHINT2.BAF: 3-10</td>
+
+ </tr>
+ <tr>
+  <td>RunAwayFrom</td>
+  <td>VARIABLE</td>
+  <td>GLOBAL</td>
+  <td><span style="mso-spacerun: yes"> </span>x#david.baf: 551; x#fight2.baf: 7, 121; x#gpsht.baf: 105, x#xqmerx.baf: 15; x#pcinit.d: 2904</td>
 
  </tr>
  <tr>
@@ -5786,6 +5807,13 @@
   <td><span style="mso-spacerun: yes"> </span>P#IMANEL.D: 181, 182 X#CORAN.D:
   776 X#KIINT.D: 363, 364, 370, 374, 375, 379, 597-603 X#KIINT2.BAF:
   78-86, 78-86, 109-116, 141-149, 158-167, 302-313</td>
+
+ </tr>
+ <tr>
+  <td>tazokminhp</td>
+  <td>VARIABLE</td>
+  <td>GLOBAL</td>
+  <td><span style="mso-spacerun: yes"> </span>x#takill.baf: 4, 8</td>
 
  </tr>
  <tr>
