--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -1140,6 +1140,10 @@
           <li>
             Lothringen: translator (Coran, except romance, Edwin, Kivan, Viconia, Xzar, Bardic Reputation Adjustment)
           </li>
+          <br/>
+          <strong>Polish translation:</strong> for support, please visit <a href="http://athkatla.cob-bg.pl/viewtopic.php?t=5734">Children of Bhaal</a>
+          <li>Translators: Cuttooth (coordinator), Jinete, Miss misery, Chisette, Yennyfer, Krist Algar, Nero, Morgan, Christoff, Marlong, Parys, Craven, Dead, Thug Poet, Yarpen, Lord Pawel</li>
+          <li>Proof readers: Cuttooth (coordinator), Kol (coordinator), Lua Nova, Claudiad, Morgan, Li, Jinete, Zireael, Soul Reaver, Picollo, Zed Nocear, Arientar, Tinuviel, Euler, Grazin </li>
         </ul>
       </p>
       <p>
