Update version number to v22!

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 21 - <a href="http://forums.gibberlings3.net/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
+        <strong>Version 22 - <a href="http://forums.gibberlings3.net/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
         <br/>
@@ -1288,7 +1288,26 @@
       <a name="history" id="history">Version History</a>
     </h2>
     <div class="section">
-      <p>
+     <p>
+        <strong>Version 22 - June 14, 2015</strong>
+     </p>
+      <ul>
+      	<li>David Jansen Quest: Adding %tutu_var% to SHLD16 items to reference where P#BAG01 and P#BAG02 should be placed in STO04901.
+      	<li>Banter Timing Tweak: Adding condition to require BG1NPC Required Changes to be installed.
+      	<li>Dynaheir's Journal Quest: Fix for quest failing to start
+      	<li>Fixed issue with journal entries not being removed for Rescue Dynaheir quest on BGEE
+      	<li>Kagain's Caravan Quest: Cross-mod compatibility with Thimberling's Skie mod.
+      	<li>Kagain's Caravan Quest: Fixed x#kaband.cre having 2 bandit scalps, x#bandk.cre did not go hostile if you attacked them
+      	<li>Romance Challenges: Fix Battle song reference for x#ch12.are
+      	<li>Fixed redudant usability sections in item descriptions for BGEE
+      	<li>Fixed issue: Ajantis Shield proficiency bonus becoming permanent in BGEE
+      	<li>Incorporated fixes from BWP Fixpack v15.1.1
+      	<li>New CRE macro: source_cre_script_cleanup. Useful for blanking scripts when using an existing CRE as a template for a new CRE.
+      	<li>Updated WeiDU to v238
+      	<li>Adding Polish translation credits to README.
+      	<li>Various dialog typo fixes.
+      </ul>
+     <p>
         <strong>Version 21 - February 7, 2015</strong>
       </p>
       <ul>
