--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -19,7 +19,7 @@
       <p>
         <strong>Coordinateurs du projet (par ordre chronologique) :
         <br/>
-        <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>, <a href="http://gibberlings3.net/forums/?showuser=62">Kish</a>, <a href="http://gibberlings3.net/forums/?showuser=30">Andyr</a>, <a href="http://gibberlings3.net/forums/?showuser=142">Domi</a>, actuellement : <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a></strong>
+        <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>, <a href="http://gibberlings3.net/forums/?showuser=62">Kish</a>, <a href="http://gibberlings3.net/forums/?showuser=30">Andyr</a>, <a href="http://gibberlings3.net/forums/?showuser=142">Domi</a>, <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a>, actuellement : <a href="http://gibberlings3.net/forums/index.php?showuser=6858">AstroBryGuy</a></strong>
       </p>
       <p>
         <strong>Sur le web : <a href="http://www.gibberlings3.net/bg1npc/">Page d'accueil</a></strong> et <strong><a href="http://gibberlings3.net/forums/index.php?showforum=45">forum de discussion</a></strong>
