--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -19,7 +19,8 @@
       <p>
         <strong>Project Coordinators (in temporal order):
         <br/>
-        <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>, <a href="http://gibberlings3.net/forums/?showuser=62">Kish</a>, <a href="http://gibberlings3.net/forums/?showuser=30">Andyr</a>, <a href="http://gibberlings3.net/forums/?showuser=142">Domi</a>, currently: <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a></strong>
+        <a href="http://gibberlings3.net/forums/?showuser=721">Blucher</a>, <a href="http://gibberlings3.net/forums/?showuser=62">Kish</a>, <a href="http://gibberlings3.net/forums/?showuser=30">Andyr</a>, <a href="http://gibberlings3.net/forums/?showuser=142">Domi</a>, <a href="http://gibberlings3.net/forums/?showuser=844">cmorgan</a>,
+        currently: <a href="http://gibberlings3.net/forums/index.php?showuser=6858">AstroBryGuy</a></strong>
       </p>
       <p>
         <strong>On the web: <a href="http://www.gibberlings3.net/bg1npc/">Home page</a></strong> and <strong><a href="http://gibberlings3.net/forums/index.php?showforum=45">discussion forum</a></strong>
