--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -29,7 +29,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
+        <strong>Version 22.1 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
         <br/>
@@ -1289,7 +1289,15 @@
       <a name="history" id="history">Version History</a>
     </h2>
     <div class="section">
-     <p>
+      <p>
+        <strong>Version 22.1 - December 1, 2015</strong>
+     </p>
+      <ul>
+      	<li>Correcting typos in German tra files [Isaya]
+	  	<li>More German translations [Jastey]
+	  	<li>Numerous minor bug fixes
+	  </ul>
+    <p>
         <strong>Version 22 - June 14, 2015</strong>
      </p>
       <ul>
