--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
+        <strong>Version 22.1 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
         <br/>
         <strong>Langues :</strong> Anglais, Espagnol, Français, Polonais, Allemand* (teilweise noch in englisch)
         <br/>
@@ -1309,6 +1309,14 @@
       <p>
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
+      <p>
+        <strong>Version 22.1 - December 1, 2015</strong>
+     </p>
+      <ul>
+      	<li>Correcting typos in German tra files [Isaya]
+	  	<li>More German translations [Jastey]
+	  	<li>Numerous minor bug fixes
+	  </ul>
      <p>
         <strong>Version 22 - June 14, 2015</strong>
      </p>
