--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22.1 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
+        <strong>Version 22.3 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
         <br/>
         <strong>Langues :</strong> Anglais, Espagnol, Français, Polonais, Allemand* (teilweise noch in englisch)
         <br/>
@@ -1309,6 +1309,24 @@
       <p>
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
+      <p>
+        <strong>Version 22.3 - 2016-04-16</strong>
+     </p>
+      <ul>
+      	<li>Fix Gatekeeper dialog if CHARNAME has been to the Friendly Arm Inn
+      	<li>Updating Jaheira's interjection to ELMIN2.DLG
+      	<li>Moving SetGlobal actions to before non-INSTANT actions
+      	<li>Updating CRE sounds for Xan's quest CREs
+      	<li>Update for Coran Wyvern Quest fixes for BGEEv2
+      	<li>No Dynaheir Romance endgame cutscene on SoD
+      	<li>Updates for "your voice is strange" PID function on BGEE and BGT.
+	  </ul>
+      <p>
+        <strong>Version 22.2 - December 12, 2015</strong>
+     </p>
+      <ul>
+      	<li>Fix for bug in NPC Starting Location Component - Thanks Lollorian!
+	  </ul>
       <p>
         <strong>Version 22.1 - December 1, 2015</strong>
      </p>
