Update version to 22.4

--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -29,7 +29,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22.3 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
+        <strong>Version 22.4 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
         <br/>
@@ -1289,6 +1289,31 @@
       <a name="history" id="history">Version History</a>
     </h2>
     <div class="section">
+      <p>
+        <strong>Version 22.4 - 2017-01-04</strong>
+     </p>
+      <ul>
+      	<li>Updates for Jaheira's "Bury Gorion" dialogue
+      	<li>Updates to Kagain's Quest
+      	<li>Update BGEE Banter Tweak prompts
+      	<li>Change Shar-teel's interjection on meeting Kagain
+      	<li>Update Lord Foreshadow's Ring Description
+      	<li>Ajantis Bhaaltalks - variable correction
+      	<li>Fixing Minsc's interjection with Vitiare
+      	<li>Check before adding "missing" items to BGEE games (SoD adds many of
+the previously missing items)
+		<li>Portraits: Make filenames consistent with naming scheme, i.e.
+%SOURCE_RES%s.bmp
+		<li>Portraits: Replaced BGEE portraits with new 169x266 images
+		<li>Portraits: Added a few new portraits
+		<li>Fix for 2 Legacy of the Masters gauntlets in Bandit Camp
+		<li>Make Amulet of the Apprentice Mage unusable by Monks
+		<li>Updates to dragons for Romance Challenges
+		<li>Update BGT_VAR for EET support
+		<li>Update x#tqbh2.cre sex to match animation
+		<li>Enforce LoveTalk timer on Branwen romance post-rest talks
+		<li>Fix Colquetle Family Amulet bug
+	  </ul>
       <p>
         <strong>Version 22.3 - 2016-04-16</strong>
      </p>
