Updates to README
Added note about French translation update

--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -1310,6 +1310,32 @@
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
       <p>
+        <strong>Version 22.4 - 2017-01-04</strong>
+     </p>
+      <ul>
+      	<li>Updates for Jaheira's "Bury Gorion" dialogue
+      	<li>Updates to Kagain's Quest
+      	<li>Update BGEE Banter Tweak prompts
+      	<li>Change Shar-teel's interjection on meeting Kagain
+      	<li>Update Lord Foreshadow's Ring Description
+      	<li>Ajantis Bhaaltalks - variable correction
+      	<li>Fixing Minsc's interjection with Vitiare
+      	<li>Check before adding "missing" items to BGEE games (SoD adds many of
+the previously missing items)
+		<li>Portraits: Make filenames consistent with naming scheme, i.e.
+%SOURCE_RES%s.bmp
+		<li>Portraits: Replaced BGEE portraits with new 169x266 images
+		<li>Portraits: Added a few new portraits
+		<li>Fix for 2 Legacy of the Masters gauntlets in Bandit Camp
+		<li>Make Amulet of the Apprentice Mage unusable by Monks
+		<li>Updates to dragons for Romance Challenges
+		<li>Update BGT_VAR for EET support
+		<li>Update x#tqbh2.cre sex to match animation
+		<li>Enforce LoveTalk timer on Branwen romance post-rest talks
+		<li>Fix Colquetle Family Amulet bug
+		<li>French translation updates
+	  </ul>
+      <p>
         <strong>Version 22.3 - 2016-04-16</strong>
      </p>
       <ul>
