--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -1313,6 +1313,7 @@ the previously missing items)
 		<li>Update x#tqbh2.cre sex to match animation
 		<li>Enforce LoveTalk timer on Branwen romance post-rest talks
 		<li>Fix Colquetle Family Amulet bug
+		<li>French translation updates
 	  </ul>
       <p>
         <strong>Version 22.3 - 2016-04-16</strong>
