--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -1310,6 +1310,13 @@
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
       <p>
+        <strong>Version 22.5 - 2017-01-08</strong>
+     </p>
+      <ul>
+		<li>French translation updates
+		<li>Fixed item flags for Romance Challenge dragons
+	  </ul>
+      <p>
         <strong>Version 22.4 - 2017-01-04</strong>
      </p>
       <ul>
