--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -1290,6 +1290,13 @@
     </h2>
     <div class="section">
       <p>
+        <strong>Version 22.5 - 2017-01-08</strong>
+     </p>
+      <ul>
+		<li>French translation updates
+		<li>Fixed item flags for Romance Challenge dragons
+	  </ul>
+      <p>
         <strong>Version 22.4 - 2017-01-04</strong>
      </p>
       <ul>
