--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -28,7 +28,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22.3 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
+        <strong>Version 22.6 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Vérifiez la version la plus récente</a></strong>
         <br/>
         <strong>Langues :</strong> Anglais, Espagnol, Français, Polonais, Allemand* (teilweise noch in englisch)
         <br/>
@@ -1309,6 +1309,12 @@
       <p>
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
+      <p>
+        <strong>Version 22.6 - 2017-01-28</strong>
+     </p>
+      <ul>
+		<li>Fixed: missing entar.cre for BGT install? https://github.com/Gibberlings3/BG1NPC/issues/23
+	  </ul>
       <p>
         <strong>Version 22.5 - 2017-01-08</strong>
      </p>
