--- a/bg1npc/readme-bg1npc.html
+++ b/bg1npc/readme-bg1npc.html
@@ -29,7 +29,7 @@
         <br/>
       </p>
       <p>
-        <strong>Version 22.6 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
+        <strong>Version 22.7 - <a href="http://gibberlings3.net/forums/index.php?app=downloads&showcat=11">Check for the most recent version</a></strong>
         <br/>
         <strong>Languages:</strong> English, Spanish, French, Polish, German* (teilweise noch in englisch)
         <br/>
@@ -1289,6 +1289,12 @@
       <a name="history" id="history">Version History</a>
     </h2>
     <div class="section">
+      <p>
+        <strong>Version 22.7 - 2017-03-01</strong>
+     </p>
+      <ul>
+		<li>Fixed issue with BMPs with negative heights in header.
+	  </ul>
       <p>
         <strong>Version 22.6 - 2017-01-28</strong>
      </p>
