Update README to v22.8

--- a/bg1npc/readme-bg1npc-french.html
+++ b/bg1npc/readme-bg1npc-french.html
@@ -1310,6 +1310,13 @@
         <em>[NdT : cette section est intentionnellement laissée en anglais. Pour paraphraser une certaine publicité, "avoir certaines informations importantes dans sa langue, ça n'a pas de prix, pour le reste, il y a XXX Translate" (remplacez XXX par votre site préféré de traduction en ligne).]</em>
       </p>
       <p>
+        <strong>Version 22.8 - 2017-03-25</strong>
+     </p>
+      <ul>
+		<li>Fixed issue with Faldorn-Izefia quest. https://github.com/Gibberlings3/BG1NPC/issues/26
+		<li>Deprecating Non-Joinable NPC Portraits component due to copyright issues
+	  </ul>
+      <p>
         <strong>Version 22.7 - 2017-03-01</strong>
      </p>
       <ul>
